# Truthy

./: BooleanLogic.cpp  BooleanLogic.hpp  Operator.cpp  README.md  User Manual.docx  makefile
.github/workflows/: cmake-single-platform.yml
archive/: read.txt
archive/src/tests/: test.cpp
archive/truthy src/: CLIInterface.hpp  ExpressionParser.hpp
archive/truthy src/tests/: test.cpp
docs/: User Manual.docx
src/: BooleanLogic.cpp  CLIInterface.cpp  CMakeCache.txt  CMakeLists.txt  ExpressionEvaluator.cpp  ExpressionEvaluator.hpp  ExpressionParser.cpp  ExpressionParser.hpp  Makefile  NOTES.md  Operator.hpp  README.md  Span.cpp  Span.hpp  Token.cpp  Token.hpp  main.cpp
src/errors/: MissingClosingParenthesisException.cpp  MissingClosingParenthesisException.hpp  MissingOpeningParenthesisException.cpp  MissingOpeningParenthesisException.hpp  MissingOperandsException.cpp  MissingOperandsException.hpp  MissingOperatorException.cpp  MissingOperatorException.hpp  ParseException.cpp  ParseException.hpp  TokenizationException.cpp  TokenizationException.hpp
src/tests/: test.cpp  test_cases.txt  test_cases_results.txt  testcaseGuide.txt
truthy src/: CLIInterface.cpp  CMakeLists.txt  ExpressionParser.cpp  ExpressionParser.hpp  Token.hpp
truthy src/tests/: test.cpp
